--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
 # Project files
-
+.Config
+.Data
 
 # User-specific files
 *.rsuser
